Fix place capture button text readability

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -325,3 +325,7 @@ body {
 #place-health-place {
     height: 15px;
 }
+
+#capturebtn {
+    color: black;
+}
